# ChangeLog for x11-misc/promile-qt
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> -promile-qt-0.6.1.1.ebuild,
  +promile-qt-0.8.0.ebuild:
  Bumped. Removed oldest ver.

  10 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> +promile-qt-0.7.2.ebuild:
  Bumped.

  08 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> -promile-qt-0.5.2.ebuild,
  -promile-qt-0.6.0.ebuild, +promile-qt-0.7.1.ebuild:
  Bumped. Removed cruft.

  05 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> +promile-qt-0.6.1.1.ebuild:
  Bumped.

  04 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> promile-qt-0.5.2.ebuild,
  promile-qt-0.6.0.ebuild:
  Changed required QT version to 4.3

  02 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> +promile-qt-0.6.0.ebuild:
  Bumped.

  28 Mar 2008; Michał Ziąbkowski <mziab@o2.pl> +promile-qt-0.5.2.ebuild:
  Initial ebuild.
