@@ -1,7 +1,3 @@
-DIST promile-qt-0.7.1-src.tar.bz2 71934 RMD160 440788ab467502ea8f6602bfe4f7e6e5d62e8136 SHA1 aeac4257dba7a300d5500d35eda603fede882550 SHA256 b9bee53d6abc9fbdd15a8e04be3ab32d5e5de40da382da81fbdebaafc0f57032
-DIST promile-qt-0.7.2-src.tar.bz2 71635 RMD160 d04effa6cd0c5884db444cfb8f494ad94d982153 SHA1 67f483a63a21d4ca2c7be989f7c24f7730cc635e SHA256 2bfa04de6a5d7ff7f7baafe7d74328c0b027a2b747243ffaa307dc301f5abaf2
 DIST promile-qt-0.8.0-src.tar.bz2 73312 RMD160 40551c6b0ba3ea612d81da92ea88be2e9c50c338 SHA1 382ddc9f64a5da886e3432706b0f41aef9950bf3 SHA256 e39f75ff13a8b07755af09faf0707aed3dd0df17f501096e0d702185297f5861
-EBUILD promile-qt-0.7.1.ebuild 720 RMD160 c104ae541b7b5229194d8823fbad1aca31aba76a SHA1 2f60655f586a7be81fa2619d5693b63335ebb40c SHA256 d2d6f9ba0955c19caf65eac62059129014736f00e0452a99ae62696cc8b07251
-EBUILD promile-qt-0.7.2.ebuild 720 RMD160 c104ae541b7b5229194d8823fbad1aca31aba76a SHA1 2f60655f586a7be81fa2619d5693b63335ebb40c SHA256 d2d6f9ba0955c19caf65eac62059129014736f00e0452a99ae62696cc8b07251
 EBUILD promile-qt-0.8.0.ebuild 720 RMD160 c104ae541b7b5229194d8823fbad1aca31aba76a SHA1 2f60655f586a7be81fa2619d5693b63335ebb40c SHA256 d2d6f9ba0955c19caf65eac62059129014736f00e0452a99ae62696cc8b07251
-MISC ChangeLog 904 RMD160 a8d4c8d6e3dac1ede0e278b9d4c8ab84dc64df7c SHA1 38e4806b2a6365fb67649e6128de02dd9bc3c5d4 SHA256 e7da911b1196e28dbfb9d927e26bf62d22ea39a8f9eb34619c7f6d68b581a41d
+MISC ChangeLog 1025 RMD160 b781a6967d1a79e6d81484595b1f4e7a21095d69 SHA1 1e7e35fd7180402b359ab1675e898f7fc421e54d SHA256 39aaee8720efcdfaf10eb0b95536386b68cb5c17c1acce6025d16f0ca34a1466
