@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 May 2008; Michał Ziąbkowski <mziab@o2.pl> -promile-qt-0.7.1.ebuild,
+  -promile-qt-0.7.2.ebuild:
+  Removed cruft.
+
   16 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> -promile-qt-0.6.1.1.ebuild,
   +promile-qt-0.8.0.ebuild:
   Bumped. Removed oldest ver.
